--- a/style.css
+++ b/style.css
@@ -61,14 +61,50 @@ body {
     margin-top: 40px;
     padding-top : 10px;
     padding-bottom: 10px;
-    border-color: white;
+    border-color: whitesmoke;
     border-style: solid;
-    border-radius: 10px;
+    border-radius: 8px;
 }
    
 
 .msg {
     display: flex;
     flex-direction: column;
-   
+}
+
+
+input{
+    border: solid whitesmoke;
+    border-radius: 8px;
+    padding: 15px;
+    max-width: 30ch;
+
+}
+
+form button {
+    font-size: 15px;
+    border:solid white;
+    border-radius: 5px;
+    margin-left: 3px;
+
+}
+
+
+
+
+
+
+
+
+
+
+/* media styling*/
+
+
+@media (min-width: 300px) and (max-width : 700px){
+    form button{
+        margin: 12px 0 0 0;
+        width: 60%;
+        background-color:yellowgreen;
+    }
 }
