--- a/style.css
+++ b/style.css
@@ -64,20 +64,26 @@ body {
     border-color: whitesmoke;
     border-style: solid;
     border-radius: 8px;
+    box-shadow: 0 0 15px black;
+    background-color: white;
 }
    
 
 .msg {
     display: flex;
     flex-direction: column;
+    display: none;
 }
 
+#city{
+box-shadow: 0 0 15px black;
 
+}
 input{
     border: solid whitesmoke;
     border-radius: 8px;
     padding: 15px;
-    max-width: 30ch;
+    max-width: 50ch;
 
 }
 
@@ -86,7 +92,40 @@ form button {
     border:solid white;
     border-radius: 5px;
     margin-left: 3px;
+    cursor: pointer;
+    transition: background-color 0.4s ease-in;
+}
 
+form button:hover {
+    background-color : greenyellow;
+}
+
+.temperature {
+    
+    justify-content: center;
+
+}
+ #temp {
+    font-size: 60px;
+}
+#celcius {
+    font-size: 30px;
+}
+
+#weather-description{
+    font-size: 20px;
+    font-family:'Lato', sans-serif;
+}
+.weather-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#icon{
+    width: 50%;
+}
+input {
+    width: 67%
 }
 
 
@@ -94,6 +133,31 @@ form button {
 
 
 
+
+
+
+
+
+
+
+
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: black;
+    font-size: 10pt; 
+ }
+ ::-moz-placeholder { /* Firefox 19+ */
+    color: black;
+    font-size: 8px; 
+ }
+ :-ms-input-placeholder { /* IE 10+ */
+    color: black;
+    font-size: 12pt; 
+ }
+ :-moz-placeholder { /* Firefox 18- */
+    color: black;
+    font-size: 12pt;
+ }
 
 
 
