--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     width: 100%;
     text-align: center;
     flex: auto;
-    height: 50vh;
+  
     
 }
 
@@ -129,13 +129,30 @@ input {
 }
 
 
+.ajax-section {
+   
+    height: 35vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 50px 0 20px;
+}
+.image-info{
+    font-family: 'Lato', sans-serif ;
+    font-size: 1.2rem;
+    
+}
+
+#photographer {
+    text-decoration: none;
+}
 
 
 
 
 
-
-
+   
+  
 
 
 
@@ -172,3 +189,5 @@ input {
         background-color:yellowgreen;
     }
 }
+
+@media (max-width : )
