--- a/style.css
+++ b/style.css
@@ -174,15 +174,31 @@ input {
 .cities{
     list-style: none;
 }
-
+.footer{
+  margin-top: 80px;
+  text-align: center;
+}
 #photographer {
   text-decoration: underline;
   color:red;
-  font-weight: 500;
+  font-weight: 1000;
   font-size:30px;
   margin-left: 5px;
 }
+.bye {
+ color: palevioletred;
+ font-weight:1000;
+ 
+}
+.bye a {
+  text-decoration: none;
+  font-weight: 1000;
+  color: darkmagenta;
+  cursor: pointer;
+}
 
+
+ 
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
@@ -206,4 +222,8 @@ input {
 }
 
 /* media styling*/
-
+@media screen and (max-width: 500px) {  
+  .ajax-section .cities {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
